poc tool to describe how a filter gets applied to an assembly

--- a/src/Microsoft.DocAsCode.Metadata.ManagedReference.Common/Microsoft.DocAsCode.Metadata.ManagedReference.Common.csproj
+++ b/src/Microsoft.DocAsCode.Metadata.ManagedReference.Common/Microsoft.DocAsCode.Metadata.ManagedReference.Common.csproj
@@ -7,6 +7,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\ReportGenerator\ReportGenerator.csproj" />
     <ProjectReference Include="..\Microsoft.DocAsCode.Common\Microsoft.DocAsCode.Common.csproj" />
     <ProjectReference Include="..\Microsoft.DocAsCode.DataContracts.Common\Microsoft.DocAsCode.DataContracts.Common.csproj" />
     <ProjectReference Include="..\Microsoft.DocAsCode.DataContracts.ManagedReference\Microsoft.DocAsCode.DataContracts.ManagedReference.csproj" />
